# gwnet-g2

./: west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: main.c
